Switched to clear fix instead of overflow hidden for contains. Fixed various float issues in IE. Removed mobile CSS (not sure how old it is, but it's not used).

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -22,7 +22,7 @@
 	a:hover { color: #436D86; }
 	header, footer, nav, summary, section, article { display: block; }
 	.clear { clear: both; }
-	.contain { overflow: hidden; }
+	.contain:after { content: ""; display: table; clear: both; }
 	
 	/* Hack To Stop WebKit From Styling input[type=search] */
 	input[type=search] { -webkit-appearance: textfield; -webkit-box-sizing: content-box; }
